# hcds-summer-2024

./: README.md
project_2/: README.md  app.py  fairness_functions.py  messages.py  requirements.txt  viz.py
project_2/data/: heart_disease.csv
project_4/: 0_🚩_Welcome.py  DecisionTree.joblib  DecisionTree_fairness_result.csv  LogisticRegression.joblib  LogisticRegression_fairness_result.csv  NeuralNetwork.joblib  NeuralNetwork_fairness_result.csv  RandomForest_fairness_result.csv  fairness_DecisionTree.joblib  fairness_LogisticRegression.joblib  fairness_NeuralNetwork.joblib  fairness_RandomForest.joblib  multi_model_dashboard.py  readme.txt  requirements.txt  train_models.py  train_models_fairness.py
project_4/pages/: 1_🏠_Introduction.py  2_⛵_Exploration.py  3_🔮_🔭_Explanation.py
project_5/: README.md  requirements.txt  stroke_prediction.py
project_7/: Homepage.py  README.txt  SVM_linear_scaled_p.sav  asthma_model.ipynb  asthma_recoded.csv  dataset_enriched.csv  make_visualizations.py  pyproject.toml  requirements.txt  scaler.pkl
project_7/pages/: AboutDs.py  AboutModel.py  Feedback.py  Prediction.py
project_8/: app.py
