[tool.poetry]
name = "group-project"
version = "0.1.0"
description = ""
authors = ["Josiphina <thielejosephina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.1"
imblearn = "^0.0"
seaborn = "^0.13.2"
xgboost = "^2.1.0"
streamlit = "^1.36.0"
scipy = "^1.14.0"
plotly = "^5.22.0"
st-pages = "^0.5.0"
squarify = "^0.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
